--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/media.css">
 
-    <title>Colorful Smoke Video and Text Manipulation Using CSS Only | Eid Mubarak 2020</title>
+    <title>Eid Mubarak To You & Your Family From Maruf Hasnat | Eid Mubarak 2020</title>
      
   </head>
   <body>
